Backpack item, not functioning yet (part 8)

--- a/src/main/resources/assets/tutorial/lang/en_us.json
+++ b/src/main/resources/assets/tutorial/lang/en_us.json
@@ -4,6 +4,7 @@
     "block.tutorial.sapphire_block": "Block of Sapphire",
     "block.tutorial.ruby_ore": "Ruby Ore",
     "block.tutorial.sapphire_ore": "Sapphire Ore",
+    "item.tutorial.backpack": "Backpack",
     "item.tutorial.ruby": "Ruby",
     "item.tutorial.sapphire": "Sapphire",
     "itemGroup.tutorial": "Tutorial Mod Item Group"
